# langPDF

./: 1_map_analise_pipeline_v1.ipynb  2_extract_pipeline_NLP_V1.ipynb  Custom_LLM_Agent_ChatModel_pt.ipynb  README.md  pyproject.toml
data/: doc_pdf.txt
modules/: cronometro.py  extraction_tools.py  message_log.py  nova_extracao_pdf_pesquisavel.py  trata_dicts.py  trata_model.py  trata_pdf.py  utils.py
note_books_chat/: Custom_LLM_Agent_ChatModel.ipynb  LangChain Cookbook Part 1 - Fundamentals.ipynb  LangChain Cookbook Part 2 - Use Cases.ipynb  SQL_Database_newpass.ipynb  chat_record_managment.ipynb  duckling_parsing.ipynb  elasticsearch.ipynb  kor.ipynb  prompts_sql_chains_rag.ipynb  query_sql19_deserialize_pd1f.ipynb  teste_env.ipynb  tracking_tokens.ipynb  transform.ipynb
