[tool.poetry]
name = "langPDF"
version = "0.1.0"
description = ""
authors = ["SN <6432132+samnoyes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
langchain = "^0.0.303"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.4.0"
weaviate-client = "^3.23.2"
psycopg2 = "^2.9.7"
lxml = "^4.9.3"
poetry-dotenv = "^0.4.0"
pip = "^23.2.1"
ipykernel = "^6.25.2"
elasticsearch = "^8.10.0"
lark = "^1.1.7"
poetry-plugin-dotenv = "^0.5.3"
pyodbc = "^4.0.39"
reportlab = "^4.0.6"
pypdf = "^3.16.4"
faiss-gpu = "^1.7.2"
unicode = "^2.9"
unidecode = "^1.3.7"
fuzzywuzzy = "^0.18.0"
pypdf2 = "^3.0.1"
pytz = "^2023.3.post1"
fitz = "^0.0.1.dev2"
frontend = "^0.0.3"
pymupdf = "^1.23.5"
pdfminer = "^20191125"
matplotlib = "^3.8.0"
pdf2image = "^1.16.3"
sklearn = "^0.0.post10"
scikit-learn = "^1.3.1"
icecream = "^2.1.3"
spacy = "^3.7.2"
unstructured = "^0.10.24"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
